Namespace added to ACR

--- a/01-docker-build-and-push-to-acr-pipeline-new.yml
+++ b/01-docker-build-and-push-to-acr-pipeline-new.yml
@@ -11,7 +11,7 @@ resources:
 variables:
   # Container registry service connection established during pipeline creation
   dockerRegistryServiceConnection: 'bbc4f95b-8fc4-4ec7-855f-2971794b262d'
-  imageRepository: 'app1nginx'
+  imageRepository: 'app1/app1nginx'
   containerRegistry: 'jyk8s.azurecr.io'
   dockerfilePath: '$(Build.SourcesDirectory)/Dockerfile'
   tag: '$(Build.BuildId)'
