--- a/kube-manifests/01-Deployment-and-LoadBalancer-Service.yml
+++ b/kube-manifests/01-Deployment-and-LoadBalancer-Service.yml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: app1-nginx
-          image: aksdevopsacr.azurecr.io/custom2aksnginxapp1
+          image: jyk8s.azurecr.io/custom2aksnginxapp1
           ports:
             - containerPort: 80
 ---
